Freya aligns correctly

--- a/styles.css
+++ b/styles.css
@@ -234,5 +234,5 @@ br{
 	width: 500px;
 	right: 0px;
 	position: absolute;
-	margin-top: -200px;
+	margin-top: -273px;
 }
